<resources>
    <string name="app_name">DZNow</string>
    <string name="logo_description">Logo</string>
    <string name="bg_description">Background</string>
    <string name="title">DZ Now</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="downloaded">Downloaded</string>
    <string name="settings">Settings</string>

    <string name="latest_news">Latest News</string>
    <string name="logo">Logo</string>
    <string name="app_name_logo">App Name</string>
    <string name="title_news">Title</string>
    <string name="place_and_or_time">Place and/or Time</string>
    <string name="a_brief_description">A brief description</string>
    <string name="news_image">News Image</string>
    <string name="download_icon">Download Icon</string>
    <string name="share_icon">Share Icon</string>
    <string name="downloaded_articles">Downloaded Articles</string>
    <string name="icon">Icon</string>


    <string name="culture">Culture</string>
    <string name="sports">Sports</string>
    <string name="international">International</string>
    <string name="politics">Politics</string>
    <string name="economy">Economy</string>
    <string name="english">English</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="notifications">Notifications</string>
    <string name="theme">Theme</string>
    <string name="french">French</string>
    <string name="arabe">Arabic</string>
    <string name="language">Language</string>

</resources>
