<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".articles"
                                             android:background="@color/lightGrey">

    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline4"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.3"/>
    <ImageView
            android:src="@drawable/screen"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/imageView3" app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/screen"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton2" android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp" android:contentDescription="@string/news_image"/>
    <ImageButton
            android:src="@drawable/share_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:contentDescription="@string/share_icon"/>
    <ImageButton
            android:src="@drawable/download_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton2"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintEnd_toStartOf="@+id/imageButton"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton" android:contentDescription="@string/download_icon"/>
    <TextView
            android:text="@string/title_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textSize="23sp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="4dp"/>
    <TextView
            android:text="@string/place_and_or_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textSize="10sp" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView6" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/a_brief_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:textSize="15sp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView7" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
</android.support.constraint.ConstraintLayout>