<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".settings_list" android:orientation="vertical">
    <LinearLayout android:layout_width="match_parent" android:layout_height="0dp" android:orientation="horizontal"
                  android:layout_weight="1" android:padding="10dp" android:id="@+id/link1">

        <ImageView
                android:src="@drawable/language"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/imageView4" android:layout_weight="2"
                android:padding="10dp" android:contentDescription="@string/icon"/>
        <TextView
                android:text="@string/language"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/textView16" android:layout_weight="5"
                android:gravity="center|left" android:padding="10dp" android:fontFamily="@font/kalam"
                android:textSize="20sp"/>
        <ImageView
                android:src="@drawable/arrow"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/imageView9" android:layout_weight="1"
                android:padding="10dp" android:contentDescription="@string/icon"/>

    </LinearLayout>
    <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/background_light"
            android:layout_weight="0"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_weight="1" android:padding="10dp" android:id="@+id/link2">
        <ImageView
                android:src="@drawable/rate"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/imageView10" android:layout_weight="2"
                android:padding="10dp"/>
        <TextView
                android:text="@string/theme"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/textView17" android:layout_weight="5"
                android:gravity="center|left" android:padding="10dp" android:fontFamily="@font/kalam"
                android:textSize="20sp"/>
        <ImageView
                android:src="@drawable/arrow"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/imageView11" android:layout_weight="1"
                android:padding="10dp"/>
    </LinearLayout>
    <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/background_light"
            android:layout_weight="0"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_weight="1" android:padding="10dp" android:id="@+id/link3">
        <ImageView
                android:src="@drawable/notifications"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/imageView12" android:layout_weight="2"
                android:padding="10dp"/>
        <TextView
                android:text="@string/notifications"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/textView18" android:layout_weight="5"
                android:padding="10dp" android:gravity="center|left" android:fontFamily="@font/kalam"
                android:textSize="20sp"/>
        <ImageView
                android:src="@drawable/arrow"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/imageView13" android:layout_weight="1"
                android:padding="10dp"/>
    </LinearLayout>
    <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/background_light"
            android:layout_weight="0"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_weight="1" android:padding="10dp" android:id="@+id/link4">
        <ImageView
                android:src="@drawable/help"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/imageView14" android:layout_weight="2"
                android:padding="10dp"/>
        <TextView
                android:text="@string/help"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/textView19" android:layout_weight="5"
                android:gravity="center|left" android:padding="10dp" android:fontFamily="@font/kalam"
                android:textSize="20sp"/>
        <ImageView
                android:src="@drawable/arrow"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/imageView15" android:layout_weight="1"
                android:padding="10dp"/>
    </LinearLayout>
    <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/background_light"
            android:layout_weight="0"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_weight="1" android:padding="10dp" android:id="@+id/link5">
        <ImageView
                android:src="@drawable/shipping"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/imageView16" android:layout_weight="2"
                android:padding="10dp"/>
        <TextView
                android:text="@string/about"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/textView20" android:layout_weight="5"
                android:padding="10dp" android:gravity="center|left" android:fontFamily="@font/kalam"
                android:textSize="20sp"/>
        <ImageView
                android:src="@drawable/arrow"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/imageView17" android:layout_weight="1"
                android:padding="10dp"/>
    </LinearLayout>
    <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/background_light"
            android:layout_weight="0"/>

</LinearLayout>